Add date with luxon and fix linters

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <body>
     <div class="main">
-      <!-- nav bar /////////////////////////////////////////// -->
+        <!-- navbar -->
       <div class="nav-bar">
         <div class="nav-bar-title">Awesome Books</div>
         <nav>
@@ -27,12 +27,14 @@
           </ul>
         </nav>
       </div>
-      <!-- first tab ///////////////////////////////////////// -->
+      <!-- Date -->
+      <div id="current-date"></div>
+      <!-- List of books -->
       <div class="list">
         <h1>All awesome books</h1>
         <div class="added-books"></div>
       </div>
-      <!-- second tab //////////////////////////////////////// -->
+      <!-- Add books -->
       <div class="add-a-new-book hide">
         <h2>Add a new book</h2>
         <div class="add-title-and-author">
@@ -44,7 +46,7 @@
         </div>
         <div class="alert-message"></div>
       </div>
-      <!-- third tab ///////////////////////////////////////// -->
+      <!-- Contact form -->
       <div class="contact hide">
         <h2>Contact Information</h2>
         <p>Lorem ipsum dolor, sit amet consectetur , nesciunt veniam.
@@ -55,12 +57,9 @@
           </ul>
         </p>
       </div>
-
-      <!-- footer //////////////////////////////////////////// -->
-      <footer>Copyright ...</footer>
+      <!-- Footer -->
+      <footer>&copy; 2023 Awesome Books</footer>
     </div>
-
-
     <script type="module" src="index.js"></script>
   </body>
 </html>
